# libimmortal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.py  libimmortal.yaml  pyproject.toml  requirements.txt  submission_runner.py
docker/: start_xvfb.sh
src/libimmortal/: __init__.py  env.py
src/libimmortal/utils/: __init__.py  aux_func.py
utils/: __init__.py  aux_func.py  enums.py  obs_limits.py
